contact section div gap bug fixed

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 .contact > div:nth-child(2) {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0 40px;
+  gap: 40px;
   padding-bottom: 120px;
 }
 
